@@ -282,6 +282,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG4200 (EXPERIMENTAL)
        Canon PIXMA MG5400 (EXPERIMENTAL)
        Canon PIXMA MG6300 (EXPERIMENTAL)
+       Canon MX390 series (EXPERIMENTAL)
+       Canon PIXMA MX391  (EXPERIMENTAL)
+       Canon PIXMA MX392  (EXPERIMENTAL)
+       Canon PIXMA MX394  (EXPERIMENTAL)
+       Canon PIXMA MX395  (EXPERIMENTAL)
+       Canon PIXMA MX396  (EXPERIMENTAL)
+       Canon PIXMA MX397  (EXPERIMENTAL)
+       Canon PIXMA MX398  (EXPERIMENTAL)
+
 
      - Canon dye-sublimation printers:
 
